<resources>
    <string name="app_name">Task Timer</string>
    <string name="menumain_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="no_task_message">No task selected</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menumain_showDuration">Duration Report</string>
    <string name="menumain_about">Abot Task Timer</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="add_edit_1name_hint">Task name required</string>
    <string name="add_edit_2description_hint">Task description(optional)</string>
    <string name="add_edit_3sortorder_hint">Order sort low to high(optional)</string>
    <string name="add_edit_1save">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed). \n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>


</resources>
