<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.example.tasktimer.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menutitle_addTask"
        android:visible="true"
        app:showAsAction="ifRoom" />
	<item
		android:id="@+id/menumain_showDuration"
		android:icon="@android:drawable/ic_menu_view"
		android:title="@string/menumain_showDuration"
		app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_settings"
        android:title="@string/menumain_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menumain_about" />

    <item
        android:id="@+id/menumain_generate"
        android:title="@string/menumain_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
