<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditActivityFragment">

    <EditText
        android:id="@+id/add_edit_1Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Vasea"
        android:ems="10"
        android:hint="@string/add_edit_1name_hint"
        android:inputType="textNoSuggestions"
        android:maxLength="60" />

    <EditText
        android:id="@+id/add_edit_2description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_edit_2description_hint"
        android:inputType="textMultiLine|textPersonName|text"
        android:maxLength="250" />

    <EditText
        android:id="@+id/add_edit_3sortorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_edit_3sortorder_hint"
        android:inputType="textPersonName|numberDecimal"
        android:maxLength="3" />

    <Button
        android:id="@+id/add_edit_1save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@android:drawable/ic_menu_save"
        android:gravity="center"
        android:text="@string/add_edit_1save" />

</LinearLayout>